* Fix resolution when processing non-standard sized images with unpaper
* Speed up downsample option by using imagemagick sample instead of resize
* Remove unnecessary decode_utf8() call causing
  'Cannot decode string with wide characters' error in Perl 5.18.
* Add support for tesseract 3.03.
  Closes bug #173 "v1.2.4 doesn't display any output"


1.2.4 (26.03.2014):

* Tie PageRange widgets together
  Closes bug #165 "all or selected? a surprise that can bite like snake" again
* Fix parsing the units of the resolution of imported images.
* Fix infinite loop scanning page 1 when 5+ exist.
* Parse negative progress percentages from scanimage.
* Fix scan dialog if no devices found.


1.2.3 (27.01.2014):

* Deal with crashed sessions with no session file
* Fixed bug setting TMPDIR in preferences
* Added menu item 'Open crashed session'
* Don't process empty lists of pages
  Closes bug #165 "all or selected? a surprise that can bite like snake"


1.2.2 (13.01.2014):

* Fixed paper editor widget
* Fixed position of paper size widget
* Hide geometry widgets at startup if paper selected


1.2.1 (12.01.2014):

* Fixed opening saved sessions
* Fixed storing resolution of scanned images
  Closes Debian bug #734854 (gscan2pdf wrong resolution)


1.2.0 (23.11.2013):

* Don't lose extension if user-defined tool converts pnm to pbm, ppm or pgm.
  Closes Launchpad bug 889549 (again)
  (gscan2pdf gimp integration creates page size error)
* Allow thread to import different number of pages than requested.
  Closes LP: #1163739 (Import of pdf no longer working)
* Take the resolution directly from the scanner when scanning rather than
  assuming that the system value is up-to-date.
  Closes bug 134 (reduces PDF to half size of scan)
* Fixed UTF8 handling with gocr
  Thanks to patch from Pablo Saratxaga
* Fixed import of multipage TIFFs
  Closes Launchpad bug 1181019
  (importing existing multipage tif file loads only the first one)