@@ -168,7 +168,8 @@ t/123_save_djvu_with_hocr.t
 t/124_cancel_save_djvu.t
 t/131_save_tiff.t
 t/132_cancel_save_tiff.t
-t/14_save_image.t
+t/141_save_image.t
+t/142_save_image_with_quote.t
 t/151_save_text.t
 t/152_save_utf8.t
 t/161_import_TIFF.t
